functions topCOcorrency, getViewwingForTime, orderOcorrency, overOcorrency100

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 .json
 histórico-de-visualização.json
+historico-de-visualizacao-paulo.json
+historico-de-visualizacao-gabriel.json
+histórico-de-visualização-luis.json
+histórico-de-visualização-Vinicius-Manoel.json
+api-youtube.txt
 package-lock.json
 package.json
 node_modules/
